@@ -2,7 +2,9 @@ package com.meongnyangerang.meongnyangerang.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -18,14 +20,15 @@ import com.meongnyangerang.meongnyangerang.domain.user.User;
 import com.meongnyangerang.meongnyangerang.dto.CustomReservationResponse;
 import com.meongnyangerang.meongnyangerang.dto.HostReservationResponse;
 import com.meongnyangerang.meongnyangerang.dto.ReservationRequest;
+import com.meongnyangerang.meongnyangerang.dto.ReservationResponse;
 import com.meongnyangerang.meongnyangerang.dto.UserReservationResponse;
 import com.meongnyangerang.meongnyangerang.exception.ErrorCode;
 import com.meongnyangerang.meongnyangerang.exception.MeongnyangerangException;
 import com.meongnyangerang.meongnyangerang.repository.ReservationRepository;
 import com.meongnyangerang.meongnyangerang.repository.ReservationSlotRepository;
-import com.meongnyangerang.meongnyangerang.repository.room.RoomRepository;
+import com.meongnyangerang.meongnyangerang.repository.ReviewRepository;
 import com.meongnyangerang.meongnyangerang.repository.UserRepository;
-import com.meongnyangerang.meongnyangerang.repository.accommodation.AccommodationRepository;
+import com.meongnyangerang.meongnyangerang.repository.room.RoomRepository;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
@@ -55,7 +58,7 @@ class ReservationServiceTest {
   private ReservationSlotRepository reservationSlotRepository;
 
   @Mock
-  private AccommodationRepository accommodationRepository;
+  private ReviewRepository reviewRepository;
 
   @Mock
   private UserRepository userRepository;
@@ -98,11 +101,13 @@ class ReservationServiceTest {
         roomId, checkOutDate.minusDays(1))).thenReturn(Optional.empty());
 
     // when
-    reservationService.createReservation(userId, request);
+    ReservationResponse response = reservationService.createReservation(userId, request);
 
     // then
     verify(reservationSlotRepository, times(1)).saveAll(any());
     verify(reservationRepository, times(1)).save(any());
+    assertNotNull(response.getOrderNumber());
+    assertTrue(response.getOrderNumber().matches("^[a-f0-9-]{36}$"));
   }
 
   @Test
@@ -303,7 +308,6 @@ class ReservationServiceTest {
   void getUserReservation_success() {
     Long userId = 1L;
     Long cursorId = 0L;
-    Long accommodationId = 1L;
     int size = 20;
     ReservationStatus status = ReservationStatus.RESERVED;
 
@@ -382,12 +386,10 @@ class ReservationServiceTest {
         .thenReturn(list.stream()
             .filter(reservation -> reservation.getStatus() == status &&
                 reservation.getUser().getId().equals(userId))
-            .collect(Collectors.toList()));
+            .toList());
 
-    when(roomRepository.findById(101L)).thenReturn(Optional.of(room1));
-    when(roomRepository.findById(102L)).thenReturn(Optional.of(room2));
-
-    when(accommodationRepository.findById(accommodationId)).thenReturn(Optional.of(accommodation));
+    when(reviewRepository.existsByReservationId(r1.getId())).thenReturn(false);
+    when(reviewRepository.existsByReservationId(r2.getId())).thenReturn(true);
 
     CustomReservationResponse<UserReservationResponse> response = reservationService.getUserReservations(
         userId, cursorId, size,
@@ -395,6 +397,8 @@ class ReservationServiceTest {
 
     assertEquals(2, response.getContent().size());
     assertFalse(response.isHasNext());
+    assertEquals(false, response.getContent().get(0).isReviewWritten());
+    assertEquals(true, response.getContent().get(1).isReviewWritten());
   }
 
   @Test
@@ -417,13 +421,27 @@ class ReservationServiceTest {
         .createdAt(LocalDateTime.now())
         .build();
 
+    ReservationSlot slot1 = new ReservationSlot(room, reservation.getCheckInDate(), true);
+    ReservationSlot slot2 = new ReservationSlot(room, reservation.getCheckInDate().plusDays(1),
+        true);
+
+    List<ReservationSlot> slots = new ArrayList<>();
+    slots.add(slot1);
+    slots.add(slot2);
+
     when(reservationRepository.findById(reservation.getId())).thenReturn(Optional.of(reservation));
+    when(reservationSlotRepository.findByRoomAndReservedDateBetween(reservation.getRoom(),
+        reservation.getCheckInDate(), reservation.getCheckOutDate().minusDays(1)))
+        .thenReturn(slots);
 
     // when
     reservationService.cancelReservation(user.getId(), reservation.getId());
 
     // then
     verify(reservationRepository, times(1)).findById(reservation.getId());
+    verify(reservationSlotRepository, times(1)).findByRoomAndReservedDateBetween(
+        reservation.getRoom(), reservation.getCheckInDate(),
+        reservation.getCheckOutDate().minusDays(1));
     assertEquals(ReservationStatus.CANCELED, reservation.getStatus());
   }
 
